--- a/index.html
+++ b/index.html
@@ -4,34 +4,8 @@
         <meta charset="UTF-8">
         <title> Мой сайт
         </title>
-        <link rel="stylesheet" href="C:\Users\zeus2\OneDrive\Рабочий стол\web\WEB\css\style.css">
+        <link rel="stylesheet" href="css\style.css">
     </head>
     <body>
-        <h1>Примеры стилей CSS</h1>
-    <p>Это пример стилизации элемента &lt;p&gt;</p>
-    <div id="ichi">Это пример стилизации элемента с id "ichi"</div>
-    <div class="left">Это пример стилизации элемента с классом "left"</div>
-    <div class="right">Это пример стилизации элемента с классами "right"</div>
-    <a href="https://www.example.com">Это пример ссылки</a>
-    <form class="text-field">
-        <input class="text-field__input" type="text" placeholder="Введите текст">
-        <input class="text-field__submit" type="submit" value="Отправить">
-    </form>
-    <table>
-        <tr>
-            <th>Заголовок 1</th>
-            <th>Заголовок 2</th>
-            <th>Заголовок 3</th>
-            <th>Заголовок 4</th>
-        </tr>
-        <tr>
-            <td class="cell1">Ячейка 1</td>
-            <td class="cell2">Ячейка 2</td>
-            <td class="cell1">Ячейка 3</td>
-            <td class="cell2">Ячейка 4</td>
-
-        </tr>
-    </table>
-<div id=”ichi”> Это пример стилизации элемента с id "ichi"</div>
-</body>
+    </body>
 </html>
